--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,6 +3,11 @@
 
 	"name": "Slideshow",
 	"version": "0.0.0",
+	"icons": {
+		"24": "icon.png",
+		"48": "icon@2x.png",
+		"96": "icon@4x.png"
+	},
 
 	"background": {
 		"scripts": [
